Mon Oct 11 20:20:23 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (HTTP.get): specify ASCII-8BIT as the result
	  encoding of Zlib::GzipReader.
	  http://hibari.2ch.net/test/read.cgi/tech/1281473294/271

Mon Oct 11 14:03:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (syserr_initialize): set the encoding of Errno::*#message
	  as locale. [ruby-dev:42358]

Mon Oct 11 06:11:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_set_encoding): use rb_funcall2 when the io is not
	  a T_FILE. [ruby-dev:42356]

Fri Oct  8 00:24:54 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Fixing documentation typos.  [ruby-core:32712]

Thu Oct  7 18:10:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in, win32/Makefile.sub (RCFILES): depend on
	  real config.rb file.  [ruby-core:32709]

Wed Oct  6 11:52:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): write_mutex might have been destroyed
	  already in finalization phase, as the order of finalizers is not
	  guaranteed.  rb_mutex_t should be used in place of Mutex object
	  in the future.

Mon Oct  4 12:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (regexp): dregexp has literal string only at the head
	  and successors are array.  [ruby-core:32682]

Mon Oct  4 09:30:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/lib/openssl/bn.rb (Integer#to_bn): OpenSSL::BN.new
	  accepts only Strings, so call Integer#to_s(16).
	  16 is for an optimization. [ruby-dev:42336]

Mon Oct  4 07:57:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (fiber_memsize): Return size.
	  Before this change, fiber_memsize always returns 0.

Sat Oct  2 22:59:32 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_thread.rb: add for win32ole with Thread.

Thu Sep 30 16:11:08 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getenv): should return NULL if specified name